fix blink scrollbar for infinite scroll component

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,7 +18,6 @@ img {
 html {
   width: calc(100vw - 8px);
   overflow-x: hidden;
-  letter-spacing: -0.025em;
 }
 
 .swiper-button-prev,
@@ -293,4 +292,8 @@ html {
   100% {
     clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 100%, 0 100%, 0 0);
   }
+}
+
+.infinite-scroll-component::-webkit-scrollbar {
+  display: none;
 }
